dnl -*- sh -*-
AC_INIT(src/sc.c)
JD_INIT
JD_ANSI_CC

AC_PROG_MAKE_SET
AC_PROG_YACC

#Check these header since they cause trouble
AC_CHECK_HEADERS( \
stdlib.h \
unistd.h \
memory.h \
malloc.h \
termios.h \
)

AC_HEADER_DIRENT

AC_TYPE_MODE_T
AC_TYPE_PID_T
AC_TYPE_UID_T

AC_CHECK_FUNCS(\
memset \
memcpy \
putenv \
getcwd \
)

JD_SET_OBJ_SRC_DIR
JD_TERMCAP
JD_FIND_SLANG
JD_GCC_WARNINGS
JD_GET_MODULES(src/modules.lis)

AC_CONFIG_HEADER(src/sysconf.h:src/config.hin)
AC_OUTPUT(Makefile src/Makefile)

JD_CREATE_EXEC_RULE(vprint)

JD_APPEND_RULES(src/Makefile)

echo ""
echo "Edit src/Makefile to set install directories.  The default is to install"
echo "in /usr/local/bin and /usr/local/lib."
echo ""


